test/conformance/chainsaw/validate/e2e/old-object-exists/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    kubernetes.io/metadata.name: test
    size: large
