test/conformance/chainsaw/validate/e2e/old-object-exists/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-old-object
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-old-object
  - name: step-02
    try:
      - apply:
          file: ns.yaml
      - assert:
          file: ns-ready.yaml
  - name: step-03
    try:
      - apply:
          file: ns-update.yaml
